syntax = "proto3";

package ping;

// Ping服务
service PingService {
	// 发起Ping
	rpc ping(PingRequest) returns (PingResponse);
}

// 发起Ping
message PingRequest {

}

message PingResponse {

}